hphp/test/slow/reified_generics/error-function-call-1.php.expectf
Fatal error: Cannot call a non-reified function with reified generics in %s on line 5
